--- a/src/styles/blocks/mywork.pcss
+++ b/src/styles/blocks/mywork.pcss
@@ -1,3 +1,8 @@
-.mywork__content {
-    margin-bottom: 173px;
+
+.mywork__wrapper {
+    margin-bottom: 387px;
+}
+
+.mywork__title {
+    margin-bottom: 92px;
 }
