--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -3,6 +3,10 @@
     margin-bottom: 96px;
 }
 
+.reviews__wrapper {
+    margin-bottom: 213px;
+}
+
 .reviews__row {
     display: flex;
 }
@@ -48,7 +52,6 @@
 .reviews__author {
     display: flex;
     align-items: center;
-    margin-bottom: 213px;
 }
 
 .reviews__col {
