--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -12,7 +12,7 @@
 .user__wrapper {
     width: 958px;
     display: flex;
-    margin-top: 161px;
+    margin-bottom: 22%;
 }
 .user__top {
     display: flex;
@@ -25,7 +25,6 @@
 
 .user__info-ame {
     display: flex;
-    padding-bottom: 134%;
 }
 
 .user__list {
