--- a/src/styles/blocks/values.pcss
+++ b/src/styles/blocks/values.pcss
@@ -1,9 +1,13 @@
 .values {
     position: relative;
 }
+
+.values__wrapper {
+    margin-bottom: 140px;
+}
+
 .values__contaiener{
     padding-left: 27%;
-
 
     &:before {
         content: '';
