--- a/src/index.pug
+++ b/src/index.pug
@@ -19,18 +19,10 @@ html(lang="ru")
         include ./pages/sections/mywork
         include ./pages/sections/reviews
         include ./pages/sections/section-form
-      //- footer.footer
-      //-   .container.footer__container
-      //-     .footer__left
-      //-       .footer__date © 2020
-      //-       .user-promo.user-promo--footer
-      //-         h1.title.user-promo__title Санников
-      //-           span Денис
-      //-         h3.subtitle.user-promo__subtitle Личный сайт 
-      //-           span веб разработчика
-      //-     .footer__right
-      //-       +nav('nav', ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"], 0)
-              
+        include ./pages/sections/footer
+
+        
+
 
 
    
