--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -1,10 +1,16 @@
 .hero {
-    height: 100vh;
-    min-height: 650px;
+   
+
+}
+.hero__wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 100vh;
+    min-height: 650px;
+    margin-bottom: 161px;
 }
+
 .hero__header {
     padding-top: 64px;
 }
