--- a/src/styles/blocks/user-info.pcss
+++ b/src/styles/blocks/user-info.pcss
@@ -14,3 +14,10 @@
     line-height: 60px;
     color: #464e62;
 }
+.user-info {
+    text-align: center;
+}
+.user-info__desc span,
+.user-info__username span {
+    display: block;
+}
