added hero section

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,7 +12,7 @@ html(lang="ru")
       .welcome-sections
         .parallax
           +image('background/mountain.jpg', 'parallax__img', 'фон секции')
-
+        include ./pages/sections/hero
 
         
 
