added a section about me

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,7 @@ html(lang="ru")
         .parallax
           +image('background/mountain.jpg', 'parallax__img', 'фон секции')
         include ./pages/sections/hero
+        include ./pages/sections/user
 
         
 
