added section my work

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,6 +14,8 @@ html(lang="ru")
           +image('background/mountain.jpg', 'parallax__img', 'фон секции')
         include ./pages/sections/hero
         include ./pages/sections/user
+      .maincontent
+        include ./pages/sections/values
 
         
 
