added section values

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,6 +16,7 @@ html(lang="ru")
         include ./pages/sections/user
       .maincontent
         include ./pages/sections/values
+        include ./pages/sections/mywork
 
         
 
