added section reviews

--- a/src/index.pug
+++ b/src/index.pug
@@ -17,6 +17,7 @@ html(lang="ru")
       .maincontent
         include ./pages/sections/values
         include ./pages/sections/mywork
+        include ./pages/sections/reviews
 
         
 
