added section-form and footer

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,6 +18,8 @@ html(lang="ru")
         include ./pages/sections/values
         include ./pages/sections/mywork
         include ./pages/sections/reviews
+        include ./pages/sections/section-form
+        include ./pages/sections/footer
 
         
 
