--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -5,9 +5,12 @@
     justify-content: space-between;
     height: 100vh;
     min-height: 650px;
-    margin-bottom: 161px;
+    margin-bottom: 179px;
 }
-
+.hero__header,
+.hero__content {
+    z-index: $z-index100;
+}
 .hero__header {
     padding-top: 64px;
 }
