--- a/src/index.pug
+++ b/src/index.pug
@@ -9,25 +9,43 @@ html(lang="ru")
     title Portfolio | main page
   body
     .wrapper
-      .welcome-sections
-        .parallax
-          +image('background/mountain.jpg', 'parallax__img', 'фон секции')
+      .parallax
+        .parallax__layer(data-speed="0.1")
+          +image('parallax/sky.jpg', 'parallax__img', 'фон секции')
+        .parallax__layer(data-speed="0.10")
+          +image('parallax/mountain.png', 'parallax__img', 'фон секции')
+        .parallax__layer(data-speed="0.15")
+          +image('parallax/baloon.png', 'parallax__img', 'фон секции')
+        .parallax__layer(data-speed="0.21")
+          +image('parallax/cloud.png', 'parallax__img', 'фон секции')
+        .parallax__layer(data-speed="0.26")
+          +image('parallax/man.png', 'parallax__img', 'фон секции')
+        .parallax__layer(data-speed="0.25")
+          +image('parallax/mountain1.png', 'parallax__img', 'фон секции')
+        .parallax__layer(data-speed="0.27")
+          +image('parallax/white.png', 'parallax__img', 'фон секции')
         include ./pages/sections/hero
         include ./pages/sections/user
       .maincontent
         include ./pages/sections/values
         include ./pages/sections/mywork
-        include ./pages/sections/reviews
-        include ./pages/sections/section-form
+        .parallax-budda
+          .parallax-budda__layer(data-speedbudda="0.1")
+            +image('parallax-budda/budda-sky.jpg', 'parallax__img', 'фон секции') 
+          .parallax-budda__layer(data-speedbudda="0.10")
+            +image('parallax-budda/back-budda-sky.png', 'parallax__img', 'фон секции') 
+          .parallax-budda__layer(data-speedbudda="0.15")
+            +image('parallax-budda/budda-mountain.png', 'parallax__img', 'фон секции') 
+          .parallax-budda__layer(data-speedbudda="0.21")
+            +image('parallax-budda/buddha.png', 'parallax__img', 'фон секции') 
+          .parallax-budda__layer(data-speedbudda="0.26")
+            +image('parallax-budda/cloud-1.png', 'parallax__img', 'фон секции') 
+          .parallax-budda__layer(data-speedbudda="0.25")
+            +image('parallax-budda/cloud-2.png', 'parallax__img', 'фон секции')
+          .parallax-budda__layer(data-speedbudda="0.27")
+            +image('parallax-budda/cloud-3.png', 'parallax__img', 'фон секции')
+          include ./pages/sections/reviews
+          include ./pages/sections/section-form
         include ./pages/sections/footer
 
-        
-
-
-
-   
-
-
-              
-
-              
+      
