--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -2,6 +2,7 @@
     background-color: $footer-color;
     color: $white;
     padding: 92px 0 123px;
+    margin-top: 1%;
 }
 
 .footer__container {
