--- a/src/styles/blocks/reviews.pcss
+++ b/src/styles/blocks/reviews.pcss
@@ -1,71 +1,19 @@
-.reviews__btns {
-    color: $bg-links-color;
-    margin-bottom: 96px;
+.reviews {
+    position: relative;
 }
 
 .reviews__wrapper {
-    margin-bottom: 213px;
+    margin-bottom: 189px;
+    margin-top: 255px;
 }
 
-.reviews__row {
+.reviews__header {
     display: flex;
 }
 
+.reviews__content {
+    width: 63%;
+}
 .reviews__title {
-    margin-right: 120px;
-}
-
-.reviews__reviews {
-    width: 346px;
-    position: relative;
-    margin-right: 155px;
-
-    &:last-child {
-        margin-right: 0;
-    }
-
-    &:before {
-        content: '';
-        position: absolute;
-        background: svg-load('quote.svg', width=100%, height=100%);
-        opacity: 0.05;
-        width: 75px;
-        height: 79px;
-        background-repeat: no-repeat;
-        left: -94px;
-    }
-}
-
-.reviews__text {
-    margin-bottom: 25px;
-}
-
-.reviews__reviews.reviews__reviews--margin {
-    margin-left: 100px;
-}
-
-.reviews__userpic {
-    width: 25%;
-    margin-right: 21px;
-}
-
-.reviews__author {
-    display: flex;
-    align-items: center;
-}
-
-.reviews__col {
-    color: $text-color;
-    flex: 1;
-}
-
-.reviews__username {
-    font-size: 18px;
-    font-weight: 700;
-    margin-bottom: 10px;
-}
-
-.reviews__subtitle {
-    color: $text-color-opacity3;
-    font-weight: 600;
+    margin-right: 107px;
 }
