--- a/src/styles/blocks/scroll-down.pcss
+++ b/src/styles/blocks/scroll-down.pcss
@@ -6,7 +6,7 @@
     position: relative;
     padding-right: 20px;
 
-    &:before{
+    &:after{
         content: '';
         position: absolute;
         background: svg-load('scroll.svg', width=100%, height=100%);
