--- a/src/styles/blocks/user-info.pcss
+++ b/src/styles/blocks/user-info.pcss
@@ -16,6 +16,16 @@
 }
 .user-info {
     text-align: center;
+    @include desktop {
+        display: flex;
+        text-align: start;
+    }
+}
+.user-info__desc {
+  @include desktop {
+        text-align: right;
+        margin-right: 60px;
+    } 
 }
 .user-info__desc span,
 .user-info__username span {
