--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -5,7 +5,7 @@
 
 .user__left {
     width: 32%;
-    margin-right: 124px;
+    margin-right: 162px;
 }
 
 
@@ -13,14 +13,14 @@
     width: 958px;
     display: flex;
     margin-bottom: 22%;
+    z-index: $z-index100;
+   
 }
-.user__top {
-    display: flex;
-    justify-content: center;
-}
+
 .user__avatar {
- 
-    margin-bottom: 69px;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 73px;
 }
 
 .user__info-ame {
@@ -28,7 +28,7 @@
 }
 
 .user__list {
-    margin-right: 74px;
+    margin-right: 82px;
     color: $text-color-opacity3;
     font-weight: 600;
 }
@@ -60,11 +60,11 @@
     color: $text-color;
     font-size: 36px;
     font-weight: 700;
-    margin-bottom: 30px;
+    margin-bottom: 24px;
 }
 
 .user__text {
-    margin-bottom: 90px;
+    margin-bottom: 91px;
     line-height: 30px;
 }
 
@@ -84,8 +84,4 @@
         left: -56px;
     
     }
-}
-
-.user__avatar-image {
-
 }
