--- a/src/styles/components/about/blocks/about.pcss
+++ b/src/styles/components/about/blocks/about.pcss
@@ -14,7 +14,7 @@
 
 .about__left {
     width: 32%;
-    margin-right: 162px;
+    margin-right: 114px;
 
     @include phones {
         width: 100%;
@@ -39,7 +39,7 @@
 
 .about__avatar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-bottom: 73px;
 
     @include desktop {
