--- a/src/styles/components/footer/blocks/footer.pcss
+++ b/src/styles/components/footer/blocks/footer.pcss
@@ -13,7 +13,7 @@
     display: flex;
 }
 
-.footer__info {
+.footer__copyright {
     display: flex;
     width: 35%;
 
@@ -40,20 +40,20 @@
     }
 }
 
-.footer__info-text span{
+.footer__copyright-userinfo span{
     display: block;
 }
 
-.footer__info-username,
-.footer__info-desc {
+.footer__copyright-username,
+.footer__copyright-desc {
     line-height: 30px;
 }
 
-.footer__info-username {
+.footer__copyright-username {
     margin-bottom: 25px;
 }
 
-.footer__info-desc {
+.footer__copyright-desc {
     color: $white-opacity-footer-text;
 }
 
@@ -75,7 +75,7 @@
     }
 }
 
-.footer__ps-text {
+.footer__text {
     width: 38%;
     margin-bottom: 19px;
 
@@ -84,7 +84,7 @@
     }
 }
 
-.footer__text-quote {
+.footer__quote {
     width: 50%;
     position: relative;
 
