--- a/src/styles/components/form/blocks/form.pcss
+++ b/src/styles/components/form/blocks/form.pcss
@@ -36,7 +36,7 @@
 
 }
 
-.form__block {
+.form__item {
     margin-right: 90px;
     width: 100%;
     position: relative;
@@ -51,7 +51,7 @@
 }
 
 
-.form__block-title {
+.form__item-title {
     color: $text-color-opacity3;
     font-weight: 600;
     margin-left: 46px;
