--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -1,18 +1,18 @@
 footer.footer
     .container.footer__container
-        .footer__info
+        .footer__copyright
             .footer__logo © 2019
-            .footer__info-text
-                .footer__info-username.subtitle  Санников 
+            .footer__copyright-userinfo
+                .footer__copyright-username.subtitle  Санников 
                     span Денис
-                .footer__info-desc  Личный сайт 
+                .footer__copyright-desc  Личный сайт 
                     span веб-разработчика
         .footer__content
             .footer__menu.footer__menu--color--white
                 +nav('menu', ["Главная", "Обо мне", "Навыки", "Работы", "Отзывы", "Связаться"], 'menu--color--white')
             .footer__content-box
-                .footer__ps-text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-                .footer__text-quote
+                .footer__text Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+                .footer__quote
                     p Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живете
                     .footer__qute-autor Martin Golding
             .footer__links
