--- a/src/templates/common/form.pug
+++ b/src/templates/common/form.pug
@@ -5,17 +5,17 @@ section.form
             form.form
                 .form__box
                     .form__list
-                        label.form__block
-                            .form__block-title Введите ваше имя
+                        label.form__item
+                            .form__item-title Введите ваше имя
                             input.form__input(type="text",placeholder="Ковальчук Дмитрий")
                             +icon('user', 'form__input-icon')
-                        label.form__block
-                            .form__block-title Введите ваш email
+                        label.form__item
+                            .form__item-title Введите ваш email
                             input.form__input(type="email", placeholder="loftshcoll@study.com")
                             +icon('envelope', 'form__input-icon')
                     .form__row
-                        label.form__block.form__block--textarea
-                            .form__block-title Сообщение к письму
+                        label.form__item.form__block--textarea
+                            .form__item-title Сообщение к письму
                             textarea.form__input.form__input--textarea(placeholder="Требуется ваша помощь в создании сайта. Интересуют сроки и цена вопросай")
                             +icon('message', 'form__input-icon')
                     .form__btn
