--- a/src/styles/components/projects/blocks/tags.pcss
+++ b/src/styles/components/projects/blocks/tags.pcss
@@ -3,6 +3,10 @@
     color: $text-color-opacity7;
     font-size: 15px;
     font-weight: 600;
+
+    @include desktop {
+        flex-wrap: wrap;
+    }
 }
 
 .tags__item {
