--- a/src/templates/about.pug
+++ b/src/templates/about.pug
@@ -12,7 +12,7 @@ article.about
         ul.about__list.about__list--color
           li.about__item Дивногорск
           li.about__item 20 лет
-          li.about__item 21.08.1999
+          li.about__item 21 aвгуста 1999
     .about__right
       .about__welcome-text.text Привет, меня зовут
       .about__aboutname Санников Денис
