--- a/src/index.pug
+++ b/src/index.pug
@@ -10,8 +10,6 @@ html(lang="ru")
   body
     .wrapper
       .parallax
-        //- picture
-        //-   source(srcset="./src/images/background/mountain.jpg" media="screen and (min-width: 768px").mountain__img
         //- +image(`${imgSpeed[0]}`,`${imgSpeed[1]}`, 'section background')
         - 
           var imagesNumberspeed = [
@@ -26,9 +24,7 @@ html(lang="ru")
           
         each imgSpeed in imagesNumberspeed
           .parallax__layer(data-speed=`${imgSpeed[2]}`)
-            picture
-              source(srcset=require(`images/${imgSpeed[0]}`) media="screen and (min-width: 768px)").parallax__img
-              +image('background/mountain.jpg', 'section background')
+            +image(`${imgSpeed[0]}`,`${imgSpeed[1]}`, 'section background')
         include ./templates/home
         include ./templates/about
       .maincontent
