--- a/src/styles/components/home/blocks/menu.pcss
+++ b/src/styles/components/home/blocks/menu.pcss
@@ -1,5 +1,3 @@
-
-
 .home__menu--hidden .menu {
     @include tablets {
         display: none;
@@ -9,13 +7,23 @@
 .menu--color--white .menu__list {
     color: $white;
 }
+
 .menu__list {
     display: flex;
     color: $text-color;
+
+    @include tablets {
+        flex-wrap: wrap;
+    }
+
 }
 
 .menu__item {
     margin-right: 61px;
+
+    @include tablets {
+        margin-bottom: 20px;
+    }
 
     &:last-child {
         margin-right: 0;
@@ -24,7 +32,8 @@
 
 .menu__link {
     text-decoration: none;
+
     &:hover {
-         text-shadow: 0 0 1.2px #333, 0 0 1.2px #333;
+        text-shadow: 0 0 1.2px #333, 0 0 1.2px #333;
     }
 }
