--- a/src/styles/components/parallax/blocks/parallax-budda.pcss
+++ b/src/styles/components/parallax/blocks/parallax-budda.pcss
@@ -7,8 +7,9 @@
     clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 100% 100%, 100% 0%, 50% 6%);
 
     @include desktop {
-       clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 100% 100%, 100% 0%, 51% 4%); 
+        clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 100% 100%, 100% 0%, 51% 4%);
     }
+
     @include phones {
         clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 100% 100%, 100% 0%, 50% 1%);
     }
@@ -22,30 +23,54 @@
     height: 100%;
 
     &:nth-child(1) {
-        width: 100%;
-        height: 100%;
+        .parallax__img {
+            width: 100%;
+            height: 100%;
+        }
+
     }
 
     &:nth-child(3) {
-        top: 211px;
+        .parallax__img {
+            top: 211px;
+        }
+
     }
 
     &:nth-child(4) {
-        left: 50%;
-        top: 381px;
+        .parallax__img {
+            left: 50%;
+            top: 381px;
+
+            @include desktop {
+                margin-left: 213px;
+            }
+        }
+
+
+
     }
 
     &:nth-child(5) {
-        top: 563px;
+        .parallax__img {
+            top: 563px;
+        }
+
     }
 
     &:nth-child(6) {
-        top: 665px;
-        left: 25%;
+        .parallax__img {
+            top: 665px;
+            left: 25%;
+        }
+
     }
 
     &:nth-child(7) {
-        top: 998px;
-        left: -29%;
+        .parallax__img {
+            top: 998px;
+            left: -29%;
+        }
+
     }
 }
