--- a/src/styles/components/projects/blocks/slider.pcss
+++ b/src/styles/components/projects/blocks/slider.pcss
@@ -15,6 +15,7 @@
 
     @include desktop {
         height: 353px;
+        width: 56%;
     }
 
     @include tablets {
@@ -44,6 +45,25 @@
     right: 0;
     width: 100%;
     height: 100%;
+
+    &:before {
+        content: attr(data-slide);
+        position: absolute;
+        top: 50%;
+        transform: translateY(-60%);
+        line-height: 1;
+        left: 100%;
+        font-size: 400px;
+        font-weight: 800;
+        margin-left: -8%;
+        color: rgba($text-color, .05);
+
+        @include desktop {
+            top: 0;
+            transform: translateY(-15%);
+            margin-left: -11%;
+        }
+    }
 }
 
 .slider-preview__item {
@@ -69,6 +89,10 @@
 .slider__info {
     width: 24%;
     position: relative;
+
+    @include desktop {
+        width: 32%;
+    }
 
     @include tablets {
         width: 100%;
@@ -109,7 +133,7 @@
     display: flex;
 
     @include phones {
-        top: auto; 
+        top: auto;
         bottom: 0;
     }
 }
