--- a/src/templates/projects.pug
+++ b/src/templates/projects.pug
@@ -1,43 +1,64 @@
+
 section.projects
     .projects__wrapper
         .container 
             h2.projects__title.title.title--medium Мои работы
             .projects__content
-                .slider
-                    .slider__display
-                        .slider__display-content
-                            .slider__display-pic
-                                +image('content/mywork1.jpg', 'slider__display-img')
-                            .slider__display-preview
-                                -
-                                    var items = [
-                                        ["content/mywork2.jpg", ["slider-preview__images"]],
-                                        ["content/mywork3.jpg", ["slider-preview__images"]],
-                                        ["content/mywork4.jpg", ["slider-preview__images"]],
-                                        ["content/mywork5.jpg", ["slider-preview__images"]]
-                                    ];
-                                ul.slider-preview
-                                    each col in items
-                                        li.slider-preview__item
-                                            +image(`${col[0]}`, `${col[1]}`)
-                            .slider__buttons
-                                a.direction-btn.direction-btn--next
-                                a.direction-btn.direction-btn--prev
-                    .slider__info
-                        .slider__tags
-                            -
-                                var tags = [
-                                    ["HTML"],
-                                    ["CSS"],
-                                    ["Javasctipt"]
-                                ];
-                            ul.tags
-                                each tag in tags
-                                    li.tags__item #{tag[0]}
-                        .slider__info-text
-                            h3.slider__info-title.title Сайт школы образования
-                            .skider__info-desc.text 
-                                | Этот парень проходил обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
-                        .slider__info-btns
-                            a.btn-link(href="#") Посмотреть сайт
-                        
+                #slider-component
+
+script(type="text/x-template")#slider-container
+    .slider
+        display(
+            :projects="projects",
+            :currentWork="currentWork"
+            :currentIndex="currentIndex"
+            @slide="handleSlide"
+        )
+        info(
+            :currentWork="currentWork"
+        )
+        
+        
+script(type="text/x-template")#slider-display
+    .slider__display
+        .slider__display-content
+            .slider__display-pic(:data-slide="currentIndex + 1")
+                img( :src="currentWork.photo", alt="", srcset="", class="slider__display-img")
+            .slider__display-preview
+                preview(
+                    :projects="reverseWorks"
+                    :currentWork="currentWork"
+                )
+                btns(
+                    @slide="$emit('slide', $event)"
+                )
+            
+script(type="text/x-template")#slider-btns
+    .slider__buttons
+        a(@click.prevent="$emit('slide', 'next')" href="#").direction-btn.direction-btn--next
+        a(@click.prevent="$emit('slide', 'prev')" href="#").direction-btn.direction-btn--prev
+
+script(type="text/x-template")#slider-preview
+    ul.slider-preview
+        li.slider-preview__item(
+            v-for="project in projects"
+            :class="{active: project.id === currentWork.id}"   
+            )
+            img(:src="project.photo", alt="", srcset="", class="slider-preview__images")
+
+script(type="text/x-template")#slider-info
+    .slider__info
+        .slider__tags
+            tags(
+                :tags="tagsArray"
+            )
+        .slider__info-text
+            h3.slider__info-title.title {{currentWork.title}}
+            .skider__info-desc.text 
+                | {{currentWork.desc}}
+        .slider__info-btns
+            a.btn-link(:href="currentWork.link") Посмотреть сайт
+
+script(type="text/x-template")#slider-tags
+    ul.tags
+        li.tags__item(v-for="tag in tags") {{tag}}
