--- a/src/templates/skillslist.pug
+++ b/src/templates/skillslist.pug
@@ -10,41 +10,50 @@ section.skillslist
               |      образования LoftSchool. Чуть позже я освежу в нём свой 
               |     контент. А пока посмотрите, как тут всё классно и красиво!
       .skillslist__content
-        -
-          var items = [
-            ["Frontend", ["HTML5", "CSS3", "Javascript", "Vue.js"]],
-            ["Workflow", ["GIT", "Terminal", "Gulp", "Webpack"]]
-          ];
+        #skills-component
 
-        ul.skills-graphic
-          each row in items
-            li.skills-graphic__item
-              .skills
-                .skills__title.title.title--font #{row[0]}
-                .skills__content 
-                  ul.skills-ltems
-                    each skill in row[1]
-                      li.skills-items__item
-                        .skill 
-                          svg.skill__circle(viewBox="0 0 150 150")
-                            circle.circle(
-                              stroke="#e9e9e9", 
-                              stroke-width="10"
-                              cx="75"
-                              cy="75"
-                              r="65"
-                              fill="transparent"
-                              )
-                            circle.circle__round(
-                            stroke="url(#gradient)", 
-                            stroke-width="20"
-                            cx="75"
-                            cy="75"
-                            r="65"
-                            fill="transparent"
-                            style="transform-origin: center; transform: rotate(-180deg);"
-                            )
-                            linearGradient#gradient
-                              stop(offset="0%" stop-color="#9300e8")
-                              stop(offset="100%" stop-color="#4a00ed")                           
-                          .skill__title.subtitle #{skill}
+script(type="text/x-template")#skills-list
+  .skillslist__content
+    ul.skills-graphic
+      li.skills-graphic__item(v-for="skill in skills")
+        skills-item(
+          :skill="skill"
+        )
+
+script(type="text/x-template")#skills-item
+  .skills
+    .skills__title.title.title--font {{skill.skillsGroup}}
+    .skills__content 
+      ul.skills-ltems
+        li.skills-items__item(v-for="(skillPercent, skillName) in skill.skills")
+          skill(
+            :skillName="skillName"
+            :skillPercent="skillPercent"
+          )
+
+script(type="text/x-template")#skill
+  .skill 
+    svg.skill__circle(viewBox="0 0 150 150")
+      circle.circle(
+        stroke="#e9e9e9", 
+        stroke-width="10"
+        cx="75"
+        cy="75"
+        r="65"
+        fill="transparent"
+        )
+      circle.circle__round(
+         ref="color-circle"
+      stroke="url(#gradient)", 
+      stroke-width="20"
+      cx="75"
+      cy="75"
+      r="65"
+      fill="transparent"
+      style="transform-origin: center; transform: rotate(-180deg);"
+      )
+      linearGradient#gradient
+        stop(offset="0%" stop-color="#9300e8")
+        stop(offset="100%" stop-color="#4a00ed")                           
+    .skill__title.subtitle {{skillName}}
+
