--- a/src/styles/components/home/blocks/socials.pcss
+++ b/src/styles/components/home/blocks/socials.pcss
@@ -1,6 +1,10 @@
 .socials {
     display: flex;
     align-items: center;
+
+    @include phones {
+        display: none;
+    }
 }
 
 .socials__item {
