--- a/src/templates/reviews.pug
+++ b/src/templates/reviews.pug
@@ -3,10 +3,8 @@ section.reviews
         .container
             .reviews__header
                 .reviews__title.title.title--medium Что обо мне говорят
-                a.direction-btn.direction-btn--reviews
-                    +icon('arrow-down', 'direction-btn__control direction-btn__control--next') 
-                a.direction-btn.direction-btn--reviews
-                    +icon('arrow-down', 'direction-btn__control direction-btn__control--prev')
+                a.direction-btn.direction-btn--circle
+                a.direction-btn.direction-btn--circle
             .reviews__content
                 .slider-reviews
                     .slider-reviews__item
