--- a/src/styles/components/parallax/blocks/parallax-budda.pcss
+++ b/src/styles/components/parallax/blocks/parallax-budda.pcss
@@ -41,6 +41,7 @@
         .parallax__img {
             left: 50%;
             top: 381px;
+            margin-left: 12%;
 
             @include desktop {
                 margin-left: 213px;
