--- a/src/styles/components/projects/blocks/direction-btn.pcss
+++ b/src/styles/components/projects/blocks/direction-btn.pcss
@@ -38,12 +38,20 @@
     }
 }
 
-.direction-btn.direction-btn--reviews {
+.direction-btn.direction-btn--circle {
     border-radius: 50%;
     background-color: transparent;
     border: 1px solid $bg-links-color;
     margin-right: 30px;
     margin-bottom: 90px;
+    fill: black;
+
+
+    &:before {
+        background: svg-load('arrow-down.svg', fill=black, width=100%, height=100%) center center no-repeat;
+        opacity: 1;
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
 
     &:hover {
         border-color: $hover-color-purple;
