--- a/src/styles/components/form/blocks/btn.pcss
+++ b/src/styles/components/form/blocks/btn.pcss
@@ -8,4 +8,8 @@
     font-size: 18px;
     color: $white;
     border-radius: 39px 3px;
+
+    @include tablets {
+        padding: 34px 135px;
+    }
 }
