--- a/src/styles/components/reviews/blocks/slider-reviews.pcss
+++ b/src/styles/components/reviews/blocks/slider-reviews.pcss
@@ -11,6 +11,8 @@
     width: 47%;
     padding-left: 11%;
     position: relative;
+    display: flex;
+    flex-direction: column;
 
     @include tablets {
         padding-left: 5%;
@@ -49,6 +51,7 @@
 .slider-reviews__author {
     display: flex;
     align-items: center;
+    margin-top: auto;
 }
 
 .slider-reviews__author-avatar {
