--- a/src/styles/components/home/blocks/menu.pcss
+++ b/src/styles/components/home/blocks/menu.pcss
@@ -23,6 +23,11 @@
 
     @include tablets {
         margin-bottom: 20px;
+        margin-right: 79px;
+
+        &:nth-child(4) {
+            margin-right: 0;
+        }
     }
 
     &:last-child {
