--- a/src/styles/components/home/blocks/socials.pcss
+++ b/src/styles/components/home/blocks/socials.pcss
@@ -11,6 +11,10 @@
     margin-right: 43px;
     transition: .2s;
 
+    @include tablets {
+        margin-right: 50px;
+    }
+
     &:hover {
         fill: $hover-color-purple;
     }
@@ -25,7 +29,7 @@
     border: 1px solid $white-opacity;
     padding: 13px 15px 9px;
     border-radius: 50%;
-    margin-right: 17px;
+    margin-right: 26px;
     cursor: pointer;
 
     &:hover {
@@ -40,11 +44,16 @@
 .socials__icon {
     width: 25px;
     height: 25px;
+
+    @include tablets {
+        width: 31px;
+        height: 31px;
+    }
 }
 
 .socials--appearance .socials__icon {
     fill: $white-opacity;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     transition: .3s;
 }
