--- a/src/styles/components/parallax/blocks/parallax-budda.pcss
+++ b/src/styles/components/parallax/blocks/parallax-budda.pcss
@@ -1,10 +1,8 @@
-.parallax-budda {
+.last-section {
     position: relative;
-    overflow: hidden;
-    height: 1439px;
     background-position: center;
     background-size: cover;
-    clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 100% 100%, 100% 0%, 50% 6%);
+    clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 100% 100%, 100% 0%, 50% 7%);
 
     @include desktop {
         clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 100% 100%, 100% 0%, 51% 4%);
@@ -15,62 +13,80 @@
     }
 }
 
+.parallax-budda {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 .parallax-budda__layer {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
 
     &:nth-child(1) {
+        display: block;
+
         .parallax__img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
+        }
+
+    }
+
+    &:nth-child(2) {
+        display: block;
+
+        .parallax__img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
     }
 
     &:nth-child(3) {
         .parallax__img {
-            top: 211px;
+            left: 0;
+            bottom: 0;
         }
 
     }
 
     &:nth-child(4) {
         .parallax__img {
+            top: 588px;
             left: 50%;
-            top: 381px;
-            margin-left: 12%;
+            margin-left: 327px;
 
-            @include desktop {
-                margin-left: 213px;
-            }
         }
-
-
 
     }
 
     &:nth-child(5) {
         .parallax__img {
-            top: 563px;
+            left: 0;
+            bottom: 0;
         }
 
     }
 
     &:nth-child(6) {
         .parallax__img {
-            top: 665px;
-            left: 25%;
+            right: 0;
+            bottom: 0;
         }
 
     }
 
     &:nth-child(7) {
         .parallax__img {
-            top: 998px;
-            left: -29%;
+            bottom: 0;
         }
 
     }
