--- a/src/styles/components/parallax/blocks/parallax.pcss
+++ b/src/styles/components/parallax/blocks/parallax.pcss
@@ -1,22 +1,123 @@
-.parallax {
+.welcome-section {
     position: relative;
-    overflow: hidden;
-    height: 1778px;
     background-position: center;
     background-size: cover;
     clip-path: polygon(0% 0%, 0% 93%, 50% 100%, 100% 93%, 100% 0%);
-    margin-bottom: 8%;
-
+    margin-bottom: 146px;
     @include desktop {
-        margin-bottom: 12%;
+        margin-bottom: 128px;
     }
 
     @include tablets {
-        margin-bottom: 0;
+        margin-bottom: 135px;
         clip-path: polygon(0% 0%, 0% 96%, 50% 100%, 100% 96%, 100% 0%);
     }
 }
 
+
+.parallax {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+
+.parallax__layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    &:nth-child(1) {
+        display: block;
+
+        .parallax__img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &:nth-child(2) {
+        display: block;
+        .parallax__img {
+            right: 0;
+            top: 298px;
+        }
+    }
+
+    &:nth-child(3) {
+        display: block;
+        .parallax__img {
+            left: 50%;
+            top: 483px;
+            margin-left: 284px;
+        }
+    }
+
+    &:nth-child(4) {
+        display: block;
+        .parallax__img {
+            left: 0;
+            top: 35%;
+        }
+    }
+
+    &:nth-child(5) {
+        display: block;
+        .parallax__img {
+            left: 0;
+            top: 665px;
+        }
+    }
+
+    &:nth-child(6) {
+        display: block;
+        .parallax__img {
+            right: 0;
+            top: 28%;
+        }
+    }
+
+    &:nth-child(7) {
+        display: block;
+        .parallax__img {
+            left: 0;
+            bottom: 0;
+        }
+    }
+}
+
+.parallax__img {
+    width: initial;
+    height: initial;
+    position: absolute;
+}
+
+.middle-section {
+    position: relative;
+    background: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
 .parallax__layer {
     position: absolute;
     top: 0;
@@ -96,4 +197,4 @@
     position: absolute;
     width: auto;
     height: auto;
-}
+} */
