--- a/src/styles/components/projects/blocks/projects.pcss
+++ b/src/styles/components/projects/blocks/projects.pcss
@@ -4,11 +4,17 @@
     @include desktop {
         margin-bottom: 92px;
     }
+
+    @include tablets {
+        margin-bottom: 49px;
+    }
 }
 
 .projects__title {
     margin-bottom: 93px;
-
+    @include desktop {
+        margin-bottom: 61px;
+    }
     @include phones {
         text-align: center;
         margin-bottom: 25px;
