--- a/src/styles/components/skillslist/blocks/skills-graphic.pcss
+++ b/src/styles/components/skillslist/blocks/skills-graphic.pcss
@@ -1,7 +1,16 @@
-.skills-graphic__item {
-    margin-bottom: 29px;
+.skills-graphic {
+  z-index: $z-index100;
+  margin-right: 47px;
 
-      &:last-child {
-        margin-bottom: 0;
-    }
+  @include tablets {
+    margin-right: 0;
+  }
+}
+
+.skills-graphic__item {
+  margin-bottom: 29px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
