--- a/src/templates/projects.pug
+++ b/src/templates/projects.pug
@@ -54,7 +54,7 @@ script(type="text/x-template")#slider-info
             )
         .slider__info-text
             h3.slider__info-title.title {{currentWork.title}}
-            .skider__info-desc.text 
+            .slider__info-desc.text 
                 | {{currentWork.desc}}
         .slider__info-btns
             a.btn-link(:href="currentWork.link") Посмотреть сайт
