адаптив всего лендинга

--- a/src/styles/components/about/blocks/about.pcss
+++ b/src/styles/components/about/blocks/about.pcss
@@ -11,6 +11,10 @@
     @include tablets {
         padding: 0 3% 163px 4%;
     }
+
+    @include mobile {
+        padding: 0 3% 138px 4%;
+    }
 }
 
 .about__left {
@@ -54,6 +58,7 @@
         margin-left: 0;
         margin-bottom: 65px;
     }
+
     @include phones {
         justify-content: center;
         margin-bottom: 25px;
@@ -71,6 +76,10 @@
 
     @include tablets {
         margin-right: 31px;
+    }
+
+    @include mobile {
+        margin-right: 79px;
     }
 }
 
@@ -98,6 +107,11 @@
 
     @include phones {
         padding-right: 10%;
+        width: 100%;
+    }
+
+    @include mobile {
+        width: 88%;
     }
 
 }
@@ -115,6 +129,10 @@
     @include tablets {
         margin-bottom: 40px;
     }
+
+    @include mobile {
+        margin-bottom: 30px;
+    }
 }
 
 .about__text {
@@ -126,6 +144,10 @@
 
     @include phones {
         margin-bottom: 40px;
+    }
+
+    @include mobile {
+        margin-bottom: 52px;
     }
 }
 
