--- a/src/styles/components/form/blocks/btn.pcss
+++ b/src/styles/components/form/blocks/btn.pcss
@@ -12,4 +12,9 @@
     @include tablets {
         padding: 34px 135px;
     }
+
+    @include mobile {
+        border-radius: 28px 3px;
+        padding: 27px 97px;
+    }
 }
