--- a/src/styles/components/home/blocks/home.pcss
+++ b/src/styles/components/home/blocks/home.pcss
@@ -32,6 +32,11 @@
         margin-bottom: 181px;
         padding-top: 55px;
     }
+
+    @include mobile {
+        margin-bottom: 134px;
+    }
+
 }
 
 .home__menu {
@@ -46,7 +51,7 @@
 .home__buttons {
     display: flex;
     justify-content: center;
-       padding-bottom: 20px;
+    padding-bottom: 20px;
 
     @include desktop {
         padding-bottom: 18px;
