--- a/src/styles/components/home/blocks/menu.pcss
+++ b/src/styles/components/home/blocks/menu.pcss
@@ -30,6 +30,11 @@
         }
     }
 
+    @include mobile {
+        margin-bottom: 26px;
+        margin-right: 83px;
+    }
+
     &:last-child {
         margin-right: 0;
     }
