--- a/src/styles/components/home/blocks/popup.pcss
+++ b/src/styles/components/home/blocks/popup.pcss
@@ -1,3 +1,11 @@
+.popup {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 .popup__wrapper {
     position: absolute;
     height: 100vh;
@@ -23,13 +31,15 @@
 .popup__socials {
     margin-left: 90px;
 }
+
 .popup__btn {
     position: absolute;
-    top: 9%;
+    top: 7%;
     right: 13%;
-    z-index: $z-index100;
+    z-index: 200;
 }
 
 .popup__btn-cross {
+    cursor: pointer;
     width: 25px;
 }
