--- a/src/styles/components/parallax/blocks/parallax.pcss
+++ b/src/styles/components/parallax/blocks/parallax.pcss
@@ -12,6 +12,16 @@
         margin-bottom: 135px;
         clip-path: polygon(0% 0%, 0% 96%, 50% 100%, 100% 96%, 100% 0%);
     }
+
+    @include phones {
+        margin-bottom: 135px;
+        clip-path: polygon(0% 0%, 0% 99%, 50% 100%, 100% 99%, 100% 0%);
+    }
+
+    @include mobile {
+        margin-bottom: 105px;
+        clip-path: polygon(0% 0%, 0% 99%, 50% 100%, 100% 99%, 100% 0%);
+    }
 }
 
 
