--- a/src/templates/projects.pug
+++ b/src/templates/projects.pug
@@ -1,7 +1,7 @@
 
 section.projects
     .projects__wrapper
-        .container 
+        .container.container--hidden 
             h2.projects__title.title.title--medium Мои работы
             .projects__content
                 #slider-component
