--- a/src/templates/reviews.pug
+++ b/src/templates/reviews.pug
@@ -3,8 +3,9 @@ section.reviews
         .container
             .reviews__header
                 .reviews__title.title.title--medium Что обо мне говорят
-                a.direction-btn.direction-btn--circle
-                a.direction-btn.direction-btn--circle
+                .reviews__btn
+                    a.direction-btn.direction-btn--circle
+                    a.direction-btn.direction-btn--circle
             .reviews__content
                 .slider-reviews
                     .slider-reviews__item
