--- a/src/styles/components/footer/blocks/footer.pcss
+++ b/src/styles/components/footer/blocks/footer.pcss
@@ -6,6 +6,10 @@
     @include desktop {
         padding: 76px 0 75px;
     }
+
+    @include mobile {
+        padding: 47px 0 75px;
+    }
 }
 
 .footer__container {
@@ -28,10 +32,16 @@
     @include tablets {
         display: block;
         width: 34%;
+
     }
 
     @include phones {
         width: 100%;
+        margin-bottom: 20px;
+    }
+
+    @include mobile {
+        margin-bottom: 48px;
     }
 }
 
@@ -47,6 +57,11 @@
 
     @include desktop {
         margin-right: 0;
+    }
+
+    @include mobile {
+        font-size: 55px;
+        margin-bottom: 11px;
     }
 
 }
@@ -74,6 +89,10 @@
     @include desktop {
         margin-bottom: 15px;
     }
+
+    @include mobile {
+        font-size: 21px;
+    }
 }
 
 .footer__copyright-desc {
@@ -85,6 +104,10 @@
 
     @include tablets {
         margin-bottom: 33px;
+    }
+
+    @include mobile {
+        margin-bottom: 15px;
     }
 }
 
@@ -110,6 +133,11 @@
         width: 100%;
         margin-bottom: 59px;
     }
+
+    @include mobile {
+        width: 80%;
+        margin-bottom: 42px;
+    }
 }
 
 .footer__item-text {
@@ -121,6 +149,10 @@
 
     @include tablets {
         width: 100%;
+    }
+
+    @include mobile {
+        width: 90%;
     }
 
 }
@@ -139,6 +171,10 @@
     @include tablets {
         width: 100%;
         margin-bottom: 6px;
+    }
+
+    @include mobile {
+        margin-bottom: 11px;
     }
 }
 
