--- a/src/styles/components/home/blocks/socials.pcss
+++ b/src/styles/components/home/blocks/socials.pcss
@@ -1,10 +1,6 @@
 .socials {
     display: flex;
     align-items: center;
-
-    @include phones {
-        display: none;
-    }
 }
 
 .socials__item {
@@ -56,4 +52,12 @@
     width: 25px;
     height: 25px;
     transition: .3s;
+}
+
+.socials--hidden {
+
+    @include phones {
+        display: none;
+    }
+
 }
