--- a/src/styles/components/projects/blocks/projects.pcss
+++ b/src/styles/components/projects/blocks/projects.pcss
@@ -8,13 +8,19 @@
     @include tablets {
         margin-bottom: 49px;
     }
+
+    @include mobile {
+        margin-bottom: 106px;
+    }
 }
 
 .projects__title {
     margin-bottom: 93px;
+
     @include desktop {
         margin-bottom: 61px;
     }
+
     @include phones {
         text-align: center;
         margin-bottom: 25px;
