--- a/src/styles/components/projects/blocks/slider.pcss
+++ b/src/styles/components/projects/blocks/slider.pcss
@@ -29,6 +29,13 @@
         width: 100%;
         margin-bottom: 60px;
     }
+
+    @include mobile {
+        height: 205px;
+        width: 100%;
+        margin-bottom: 75px;
+
+    }
 }
 
 .slider__display-content {
@@ -112,6 +119,10 @@
         text-align: left;
         align-items: flex-start;
     }
+
+    @include mobile {
+        padding-left: 6%;
+    }
 }
 
 
@@ -121,14 +132,29 @@
     @include tablets {
         margin-bottom: 21px;
     }
+
+    @include mobile {
+        padding-right: 24px;
+        margin-bottom: 44px;
+    }
 }
 
 .slider__tags {
     margin-bottom: 45px;
+
+    @include mobile {
+        margin-bottom: 18px;
+    }
 }
 
 .slider__info-title {
     margin-bottom: 36px;
+
+    @include mobile {
+        margin-bottom: 11px;
+    }
+
+
 }
 
 .slider__buttons {
