--- a/src/styles/components/reviews/blocks/slider-reviews.pcss
+++ b/src/styles/components/reviews/blocks/slider-reviews.pcss
@@ -46,6 +46,10 @@
 
 .slider-reviews__text {
     margin-bottom: 25px;
+
+    @include mobile {
+        margin-bottom: 37px;
+    }
 }
 
 .slider-reviews__author {
