--- a/src/styles/components/skillslist/blocks/skills-items.pcss
+++ b/src/styles/components/skillslist/blocks/skills-items.pcss
@@ -1,6 +1,7 @@
 .skills-ltems {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -10px;
 
     @include phones {
         justify-content: center;
@@ -21,6 +22,13 @@
     @include phones {
         &:nth-child(odd) {
             margin-right: 10px;
+        }
+
+        @include mobile {
+            &:nth-child(odd) {
+                margin-right: 0;
+                width: calc(100% / 2 - 0px);
+            }
         }
 
         &:nth-child(even) {
