--- a/src/styles/components/skillslist/blocks/skillslist.pcss
+++ b/src/styles/components/skillslist/blocks/skillslist.pcss
@@ -39,6 +39,10 @@
         @include phones {
             width: 100%;
         }
+
+        @include mobile {
+            bottom: -40px;
+        }
     }
 }
 
@@ -51,6 +55,10 @@
 
     @include tablets {
         margin-bottom: 35px;
+    }
+
+    @include mobile {
+        margin-bottom: 105px;
     }
 }
 
@@ -79,7 +87,9 @@
     }
 
     @include phones {
-        width: 100%;
+
+        padding-left: 6%;
+        width: 91%;
     }
 }
 
@@ -112,13 +122,17 @@
     @include tablets {
         justify-content: center;
     }
-}
+}   
 
 .skillslist__title-subtext {
     margin-bottom: 82px;
 
     @include tablets {
         margin-bottom: 69px;
+    }
+
+    @include mobile {
+        margin-bottom: 80px;
     }
 
 }
