--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -16,7 +16,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $text-color;
+
+  &.body__hidden {
+    overflow: hidden;
+  }
 }
+
 
 .wrapper {
   overflow: hidden;
@@ -31,20 +36,18 @@ body {
   width: 92%;
 
   &--hidden {
-    @include tablets {
-      margin: 0;
-      max-width: none;
-      width: auto;
-    }
 
     @include phones {
       margin: 0 auto;
       max-width: 1480px;
+      width: 85%;
     }
-  }
 
-  @include phones {
-    width: 85%;
+    @include mobile {
+      margin: 0;
+      max-width: none;
+      width: auto;
+    }
   }
 }
 
